Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Properly manage capital_per_mil extra premium endorsement
* Add loan share endorsement
* Allow to select contracts to recalculate
* Allow to preview new payments
* Add basic loan endorsement
* Module creation