@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<form string="Change Loan At Date" col="2">
+    <label name="effective_date"/>
+    <field name="effective_date"/>
+    <label name="current_loan"/>
+    <field name="current_loan" widget="selection"/>
+    <field name="new_increments" colspan="2" mode="tree,form"/>
+    <field name="current_increments" colspan="2"/>
+    <group id="invisible" string="">
+        <field name="all_increments"/>
+        <field name="possible_loans"/>
+    </group>
+</form>
