@@ -1,3 +1,5 @@
+* Add Endorsement for loan increments modifications at any date
+
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
